Checking input for int