@@ -1,12 +1,9 @@
-import de.ait.models.User;
 import de.ait.repositories.UsersRepositoryListImpl;
 import de.ait.services.UsersServiceImpl;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -21,7 +18,7 @@ class UsersServiceImplTest {
     @Test
     void getNames() {
         List<String> actual = usersService.getNames();
-        List<String> expected = Arrays.asList("User1", "User2", "User3");
+        List<String> expected = List.of("User1", "User2", "User3");
         Assertions.assertEquals(expected, actual);
     }
     @Test
@@ -30,4 +27,6 @@ class UsersServiceImplTest {
         int expected = 30;
         assertEquals(expected,actual);
     }
+
+
 }
